working on form

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,3 +1,6 @@
 .mui-fmrmgl-MuiFormLabel-root-MuiInputLabel-root{
     color: rgba(0, 0, 0, 0.87) !important;
 }
+.mui-8zt0fu-MuiFormHelperText-root{
+    margin-left: 0px  !important;
+}
