--- a/src/app/index.css
+++ b/src/app/index.css
@@ -16,3 +16,6 @@
         text-align: left;
         margin: 4px 2px 1px;
 }
+.MuiButton-root > .MuiButton-colorPrimary{
+    background-color: black;
+}
